# Convert2EBRL

./: Convert2EBRF.pyw  Convert2EBRL.pyw  README.md  conveyor.conf  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml  python-app.yml
brf2ebrl/: README.md  pyproject.toml
brf2ebrl/src/brf2ebrl/: __init__.py
brf2ebrl/src/brf2ebrl/common/: block_detectors.py  box_line_detectors.py  emphasis_detectors.py  table_detectors.py
brf2ebrl/src/brf2ebrl/scripts/: brf2ebrl.py
brf2ebrl/tests/: test_convert_box_line_to_div.py  test_graphic_detectors_layout_matching.py  test_table_detectors.py
gh-pages/: download.html
gui/: Convert2EBRL.pyw  README.md  conveyor.conf  pyproject.toml
gui/src/convert2ebrl/: __init__.py  __main__.py  convert_task.py  log_viewer.py  update_checker.py  utils.py
gui/src/convert2ebrl/settings/: defaults.py
gui/src/convert2ebrl/tabs/: __init__.py  metadata_model.py  metadata_tab.py
plugins/brf2ebrl_bana/src/brf2ebrl_bana/: __init__.py
plugins/brf2ebrl_nfb/src/brf2ebrl_nfb/: __init__.py
src/convert2ebrf/: __main__.py  app.py  brf_to_ebrf.py  convert_task.py  utils.py
src/convert2ebrf/settings/: __init__.py  defaults.py  keys.py
src/convert2ebrl/: __main__.py  brf_to_ebrf.py  convert_task.py  hash_utils.py  log_viewer.py  main_window.py  update_checker.py  utils.py  widgets.py
src/convert2ebrl/settings/: __init__.py  defaults.py  keys.py
src/convert2ebrl/tabs/: general_tab.py  metadata_model.py  metadata_tab.py  page_settings_tab.py
