[project]
name = "Convert2EBRL"
version = "0.1.0"
description = "Tool for converting files to eBraille"
authors = [
    {name = "Michael Whapples", email = "mwhapples@aim.com"},
]
dependencies = [
    "pyside6>=6.5.2",
    "brf2ebrl @ git+https://github.com/aphtech/brf2ebrl",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "GPL-3[0-or-later"}

[project.gui-scripts]
convert2ebrl = "convert2ebrl.__main__:main"

[tool.pdm.dev-dependencies]
exe = [
    "nuitka>=1.8.4",
]


[tool.pdm.scripts]
build_exe = "python -m nuitka --include-package=brf2ebrl_bana --standalone --enable-plugins=pyside6 --disable-console {args} Convert2EBRL.pyw"
