[project]
name = "Convert2EBRL"
version = "1.0.0"
description = "Tool for converting files to eBraille"
authors = [
    {name = "Michael Whapples", email = "mwhapples@aph.org"},
    {name = "Ken Perry", email = "kperry@aph.org"},
]
dependencies = [
    "pyside6>=6.5.2",
    "brf2ebrl @ git+https://github.com/aphtech/brf2ebrl",
    "packaging>=25.0",
]
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = {text = "GPL-3[0-or-later"}

[project.urls]
download-site = "https://github.com/aphtech/Convert2EBRL/releases/latest/download"

[project.gui-scripts]
convert2ebrl = "convert2ebrl.__main__:main"

[tool.pdm.dev-dependencies]
exe = [
    "nuitka>=1.8.4",
]


[tool.pdm.scripts]
build_exe = "python -m nuitka --include-package-data=brf2ebrl --include-package=brf2ebrl_bana --standalone --enable-plugins=pyside6 --disable-console {args} Convert2EBRL.pyw"
